# calgen

./: .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
src/calgen/cli/: calgen.py
src/calgen/config/: calendar.py
src/calgen/utils/: creator.py  generator.py
tests/: test_config.py  test_creator.py  test_generate.py
